# mhered-test-pkg

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  tox.ini
.github/workflows/: CI.yaml  PyPI_publish.yaml
assets/sample_html_coverage_report/: d_0c993cba46676bf8___init___py.html  index.html  status.json
changelog.d/: 20220731_143829_manolo.heredia.md
mhered_test_pkg/: __init__.py
tests/: test_mhered_test_pkg.py
